ajuste da estrutura header

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 </head>
 <link rel="stylesheet" href="src/css/styles.css">
 <body>
-    <header>
-        <div id="logo">Naped</div>
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Séries</a></li>
-                <li><a href="">Filmes</a></li>
-                <li><a href="">Animes</a></li>
-                <li><a href="">Games</a></li>
-            </ul>
-            <button>Minha Conta</button>
-        </nav>
+    <header id="header">
+        <div class="maxWidth">
+            <nav>
+                <div id="logo">Naped</div>
+                <ul class="nav-list">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Séries</a></li>
+                    <li><a href="">Filmes</a></li>
+                    <li><a href="">Animes</a></li>
+                    <li><a href="">Games</a></li>
+                </ul>
+                <button>Minha Conta</button>
+            </nav>
+        </div>
     </header>
 </body>
 </html>
