estilização dos elementos do header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="">Animes</a></li>
                     <li><a href="">Games</a></li>
                 </ul>
-                <button>Minha Conta</button>
+                <button id="btn-nav">Minha Conta</button>
             </nav>
         </div>
     </header>
