ajuste da estrutura dos elementos da news container e do html

--- a/index.html
+++ b/index.html
@@ -23,5 +23,44 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div class="maxWidth" id="main-container">
+         <div class="text">
+            <h1>Mundo nerd? <br>
+                Naped!</h1>
+            <h2>O Naped pode ser sua fonte de informações sobre o mundo nerd e outros assuntos relacionados.</h2>
+         </div>
+         <section class="container-news">
+            <article class="rigth-news">
+                <div class="new-box" id="nw1">
+                    <div class="btn-new">
+                        <button>Lorem</button>
+                    </div>
+                    <div class="p-news">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+            </article>
+            <article class="left-news">
+                <div class="new-box box-left" id="nw2">
+                    <div class="btn-new">
+                        <button>Lorem</button>
+                    </div>
+                    <div class="p-news">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+                <div class="new-box box-left" id="nw3">
+                    <div class="btn-new">
+                        <button>Lorem</button>
+                    </div>
+                    <div class="p-news">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+            </article>
+         </section>
+        </div>
+    </main>
 </body>
 </html>
