ajuste dos botões e seus mixins

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <article class="rigth-news">
                 <div class="new-box" id="nw1">
                     <div class="btn-new">
-                        <button>Lorem</button>
+                        <button class="btn-new1">Lorem</button>
                     </div>
                     <div class="p-news">
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -44,7 +44,7 @@
             <article class="left-news">
                 <div class="new-box box-left" id="nw2">
                     <div class="btn-new">
-                        <button>Lorem</button>
+                        <button class="btn-new2">Lorem</button>
                     </div>
                     <div class="p-news">
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="new-box box-left" id="nw3">
                     <div class="btn-new">
-                        <button>Lorem</button>
+                        <button class="btn-new2">Lorem</button>
                     </div>
                     <div class="p-news">
                         <p>Lorem ipsum dolor sit amet.</p>
