--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <button class="btn-new1">Lorem</button>
                     </div>
                     <div class="p-news">
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor..</p>
                     </div>
                 </div>
             </article>
@@ -47,7 +47,7 @@
                         <button class="btn-new2">Lorem</button>
                     </div>
                     <div class="p-news">
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
                     </div>
                 </div>
                 <div class="new-box box-left" id="nw3">
@@ -55,7 +55,7 @@
                         <button class="btn-new2">Lorem</button>
                     </div>
                     <div class="p-news">
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
                     </div>
                 </div>
             </article>
