--- a/index.html
+++ b/index.html
@@ -60,6 +60,116 @@
                 </div>
             </article>
          </section>
+         <section class="container-news">
+            <article class="rigth-news news-scroll">
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+            </article>
+            <article class="left-news">
+                <div class="new-box box-left" id="nw2">
+                    <div class="btn-new">
+                        <button class="btn-new2">Lorem</button>
+                    </div>
+                    <div class="p-news">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
+                    </div>
+                </div>
+                <div class="new-box box-left" id="nw3">
+                    <div class="btn-new">
+                        <button class="btn-new2">Lorem</button>
+                    </div>
+                    <div class="p-news">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
+                    </div>
+                </div>
+                <div class="new-box box-left" id="nw3">
+                    <div class="btn-new">
+                        <button class="btn-new2">Lorem</button>
+                    </div>
+                    <div class="p-news">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
+                    </div>
+                </div>
+                <div class="new-box box-left" id="nw3">
+                    <div class="btn-new">
+                        <button class="btn-new2">Lorem</button>
+                    </div>
+                    <div class="p-news">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
+                    </div>
+                </div>
+            </article>
+         </section>
         </div>
     </main>
 </body>
