--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 Naped!</h1>
             <h2>O Naped pode ser sua fonte de informações sobre o mundo nerd e outros assuntos relacionados.</h2>
          </div>
-         <section class="container-news">
+         <section class="container-news " id="cont1">
             <article class="rigth-news">
                 <div class="new-box" id="nw1">
                     <div class="btn-new">
@@ -63,8 +63,9 @@
          <section class="container-news">
             <article class="rigth-news news-scroll">
                 <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
+                 
                     <div class="box-scroll-infos">
+                        <div class="new4"></div>
                         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
                         <p>Lorem ipsum dolor sit amet.</p>
                         <span class="date">00/00/00</span>
@@ -107,33 +108,7 @@
                         <button class="btn-new2">Ler</button>
                     </div>
                 </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
+       
             </article>
             <article class="left-news">
                 <div class="new-box box-left" id="nw2">
