ajuste do tamanho dos box left

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
        
             </article>
             <article class="left-news">
-                <div class="new-box box-left" id="nw2">
+                <div class="new-box box-left-scroll" id="nw2">
                     <div class="btn-new">
                         <button class="btn-new2">Lorem</button>
                     </div>
@@ -119,7 +119,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
                     </div>
                 </div>
-                <div class="new-box box-left" id="nw3">
+                <div class="new-box box-left-scroll" id="nw3">
                     <div class="btn-new">
                         <button class="btn-new2">Lorem</button>
                     </div>
@@ -127,7 +127,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
                     </div>
                 </div>
-                <div class="new-box box-left" id="nw3">
+                <div class="new-box box-left-scroll id="nw3">
                     <div class="btn-new">
                         <button class="btn-new2">Lorem</button>
                     </div>
