ajuste do scroll e teste com adição de elementos

--- a/index.html
+++ b/index.html
@@ -63,9 +63,98 @@
          <section class="container-news">
             <article class="rigth-news news-scroll">
                 <div class="box-scroll" id="scroll1">
-                 
+                    <div class="new4"></div>
                     <div class="box-scroll-infos">
-                        <div class="new4"></div>
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="date">00/00/00</span>
+                        <button class="btn-new2">Ler</button>
+                    </div>
+                </div>
+                <div class="box-scroll" id="scroll1">
+                    <div class="new4"></div>
+                    <div class="box-scroll-infos">
                         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
                         <p>Lorem ipsum dolor sit amet.</p>
                         <span class="date">00/00/00</span>
@@ -127,7 +216,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
                     </div>
                 </div>
-                <div class="new-box box-left-scroll id="nw3">
+                <div class="new-box box-left-scroll" id="nw3">
                     <div class="btn-new">
                         <button class="btn-new2">Lorem</button>
                     </div>
