--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
             </article>
          </section>
-         <section class="container-news">
+         <section class="container-news scoll">
             <article class="rigth-news news-scroll">
                 <div class="box-scroll" id="scroll1">
                     <div class="new4"></div>
@@ -224,14 +224,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
                     </div>
                 </div>
-                <div class="new-box box-left" id="nw3">
-                    <div class="btn-new">
-                        <button class="btn-new2">Lorem</button>
-                    </div>
-                    <div class="p-news">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
-                    </div>
-                </div>
+                
             </article>
          </section>
         </div>
