--- a/index.html
+++ b/index.html
@@ -63,140 +63,21 @@
          <section class="container-news scoll">
             <article class="rigth-news news-scroll">
                 <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
                     <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
+                        <div class="box-scroll-infos-img">
+                            <div class="new4"></div>
+                        </div>
+                        <div class="box-scroll-infos-texts">
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor....</p>
+                            <span class="date">00/00/00</span>
+                            <div class="btn-new">
+                                <button class="btn-new2">Lorem</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
-                <div class="box-scroll" id="scroll1">
-                    <div class="new4"></div>
-                    <div class="box-scroll-infos">
-                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi.</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <span class="date">00/00/00</span>
-                        <button class="btn-new2">Ler</button>
-                    </div>
-                </div>
+              
        
             </article>
             <article class="left-news">
