adição do h1 do scroll left e sua estilização

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
             </article>
          </section>
-         <section class="container-news scoll">
+         <section class="container-news">
             <article class="rigth-news news-scroll">
                 <div class="box-scroll" id="scroll1">
                     <div class="box-scroll-infos">
@@ -307,6 +307,7 @@
        
             </article>
             <article class="left-news">
+                <h1 id="h1-scroll-left">Lorem ipsum dolor</h1>
                 <div class="new-box box-left-scroll" id="nw2">
                     <div class="btn-new">
                         <button class="btn-new2">Lorem</button>
