criação do footer e estilização de seus elementos

--- a/index.html
+++ b/index.html
@@ -455,6 +455,13 @@
             </section>
         </div>
     </main>
+    <footer>
+        <div class="maxWidth" id="main-footer">
+            <div id="logo">Naped</div>
+            <p>Todas as imagens de filmes, séries e etc são marcas registradas dos seus respectivos proprietários.</p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
