adição e estilizção do h1

--- a/index.html
+++ b/index.html
@@ -394,9 +394,7 @@
             </section>
             <section class="container-news">
                 <article class="recent-news">
-                    <div class="h1">
-                        <h1>Lorem ipsum dolor</h1>
-                    </div>
+                    <h1 id="h1-scroll-left">Notícias mais recentes</h1>
                     <div class="recent-news-box">
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw12">
