separação de estliação por sessões e teste de adição da error

--- a/error.html
+++ b/error.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div class="main-container maxWidth" >
+        <div class="main-container-error maxWidth" >
             <header id="header"  >
                 <nav>
                     <div id="logo">Naped</div>
