teste da pagina de erro

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             </div>
             <section class="container-news " id="cont1">
                 <article class="rigth-news">
-                    <div class="new-box" id="nw1">
+                    <div class="new-box" id="nw1" onclick="location.href='error.html' "> 
+                      
                         <div class="btn-new">
                             <button class="btn-new1">Lorem</button>
                         </div>
@@ -69,7 +70,7 @@
                 <article class="rigth-news news-scroll">
                     <div class="box-scroll" id="scroll1">
                         <div class="box-scroll-infos">
-                            <div class="box-scroll-infos-img" id="nw4">
+                            <div class="box-scroll-infos-img" id="nw4" >
                                 <div class="new4" ></div>
                             </div>
                             <div class="box-scroll-infos-texts">
@@ -86,7 +87,7 @@
                     </div>
                     <div class="box-scroll" id="scroll1">
                         <div class="box-scroll-infos">
-                            <div class="box-scroll-infos-img" id="nw5">
+                            <div class="box-scroll-infos-img" id="nw5" >
                                 <div class="new4" ></div>
                             </div>
                             <div class="box-scroll-infos-texts">
