teste de linkagem e cursor

--- a/luta.html
+++ b/luta.html
@@ -11,7 +11,7 @@
     <header id="header">
         <div class="maxWidth">
             <nav>
-                <div id="logo">Naped</div>
+                <div id="logo"  onclick="location.href='index.html'">Naped</div>
                 <ul class="nav-list">
                     <li><a href="">Home</a></li>
                     <li><a href="">Séries</a></li>
