--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <section class="container-news " id="cont1">
                 <article class="rigth-news">
-                    <div class="new-box" id="nw1" onclick="location.href='error.html' "> 
+                    <div class="new-box" id="nw1" onclick="location.href='luta.html' "> 
                       
                         <div class="btn-new">
                             <button class="btn-new1">Lorem</button>
@@ -46,7 +46,7 @@
                     </div>
                 </article>
                 <article class="left-news">
-                    <div class="new-box box-left" id="nw2">
+                    <div class="new-box box-left" id="nw2"  onclick="location.href='error.html'">
                         <div class="btn-new">
                             <button class="btn-new2">Lorem</button>
                         </div>
