style: rename das fonts e formatação da estrutura

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+
     <header id="header">
       <div class="maxWidth">
         <nav>
@@ -36,12 +37,13 @@
             outros assuntos relacionados.
           </h2>
         </div>
-        <section class="container-news" id="cont1">
+        <section class="container-news" >
           <article class="rigth-news">
             <div class="new-box" id="nw1" onclick="location.href='luta.html' ">
               <div class="btn-new">
                 <button class="btn-new1">Lorem</button>
               </div>
+  
               <div class="p-news">
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
