--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,7 +18,7 @@
             <li><a href="">Home</a></li>
             <li><a href="">Séries</a></li>
             <li><a href="">Filmes</a></li>
-            <li><a href="">Animes</a></li>
+            <li><a href="animes.html">Animes</a></li>
             <li><a href="">Games</a></li>
           </ul>
           <button id="btn-nav">Minha Conta</button>
