style: criação da variável de tamanho das fontes e suas classes

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -28,11 +28,11 @@
     <main>
       <div class="maxWidth" id="main-container">
         <div class="text">
-          <h1>
+          <h1 class="f4">
             Mundo nerd? <br />
             Naped!
           </h1>
-          <h2>
+          <h2 class="f7">
             O Naped pode ser sua fonte de informações sobre o mundo nerd e
             outros assuntos relacionados.
           </h2>
