ajuste do tamanhod as fontes e teste de utilização

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -46,7 +46,7 @@
               </div>
   
               <div class="p-news">
-                <p>
+                <p class="f2">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                   eros tellus, malesuada et velit in, blandit molestie dolor..
                 </p>
@@ -63,7 +63,7 @@
                 <button class="btn-new2">Lorem</button>
               </div>
               <div class="p-news">
-                <p>
+                <p class="f6">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                   eros tellus, malesuada et velit in, blandit molestie dolor.
                 </p>
@@ -74,7 +74,7 @@
                 <button class="btn-new2">Lorem</button>
               </div>
               <div class="p-news">
-                <p>
+                <p class="f6">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                   eros tellus, malesuada et velit in, blandit molestie dolor.
                 </p>
@@ -90,7 +90,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -113,7 +113,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -136,7 +136,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -159,7 +159,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -182,7 +182,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -205,7 +205,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -228,7 +228,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -251,7 +251,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -274,7 +274,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -297,7 +297,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -320,7 +320,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -343,7 +343,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -366,7 +366,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -389,7 +389,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -412,7 +412,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -435,7 +435,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
@@ -458,7 +458,7 @@
                   <div class="new4"></div>
                 </div>
                 <div class="box-scroll-infos-texts">
-                  <h4>
+                  <h4 class="f6">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
